# atlas

./: .gitignore  Cargo.toml
docs/: SYSTEM_SPEC.md
src/: lib.rs  lib.rs.bak
src/engine/: mod.rs
src/engine/assets/: gltf.rs  loader.rs  mod.rs
src/engine/gpu/: bind_group.rs  command.rs  device.rs  device.rs.bak  mod.rs  pipeline.rs  surface.rs  surface.rs.bak
src/engine/math/: camera.rs  camera.rs.bak  mod.rs  transform.rs  transform.rs.bak
src/engine/render/: basic.wgsl  bloom.rs  bloom.wgsl  material.rs  mesh.rs  mesh.rs.bak  mod.rs  pass.rs  renderer.rs  shadow.rs  shadow_pass.wgsl  skybox.rs  skybox.wgsl
src/engine/time/: clock.rs
src/features/: mod.rs
src/features/example_feature/: mod.rs
src/runtime/: input.rs  mod.rs  scene.rs  scene_loader.rs
tools/: sync_spec.py
web/: bootstrap.js  index.html
