[package]
name = "atlas-webgpu"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = "27"
bytemuck = { version = "1.14", features = ["derive"] }
glam = "0.27"
gltf = "1.4"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
js-sys = "0.3"

web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "MouseEvent",
"WheelEvent",
] }

console_error_panic_hook = "0.1"
wee_alloc = "0.4"
log = "0.4"
console_log = "1.0"


[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"


